[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/music/do.mp3" type="AudioStream" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://150water2_blue.png" type="Texture" id=3]
[ext_resource path="res://assets/Halogen_0.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/blue_list.jpg" type="Texture" id=5]
[ext_resource path="res://150water2_orange.png" type="Texture" id=6]
[ext_resource path="res://assets/white_orange.jpg" type="Texture" id=7]
[ext_resource path="res://assets/white_purple.jpg" type="Texture" id=8]
[ext_resource path="res://150water2_red.png" type="Texture" id=9]
[ext_resource path="res://assets/krest.png" type="Texture" id=10]
[ext_resource path="res://note.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 27
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="BlueList" type="Sprite" parent="."]
position = Vector2( 155.5, 294.75 )
scale = Vector2( 0.394444, 1.18401 )
texture = ExtResource( 5 )

[node name="OrangeList" type="Sprite" parent="."]
position = Vector2( 512, 296 )
scale = Vector2( 0.397778, 1.18497 )
texture = ExtResource( 7 )

[node name="PurpleList" type="Sprite" parent="."]
position = Vector2( 859.5, 296.75 )
scale = Vector2( 0.378889, 1.19942 )
texture = ExtResource( 8 )

[node name="NoteBlue" type="Sprite" parent="."]
visible = false
position = Vector2( 164, 523 )
texture = ExtResource( 11 )

[node name="NoteOrange" type="Sprite" parent="."]
visible = false
position = Vector2( 498, 513 )
texture = ExtResource( 11 )

[node name="NotePurple" type="Sprite" parent="."]
visible = false
position = Vector2( 845, 520 )
texture = ExtResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_top = -1.0
margin_right = 330.0
margin_bottom = 601.0

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 335.0
margin_top = -4.0
margin_right = 684.0
margin_bottom = 603.0
rect_pivot_offset = Vector2( -922, 228 )

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 691.0
margin_top = -2.0
margin_right = 1024.0
margin_bottom = 604.0
rect_pivot_offset = Vector2( -914, 48 )

[node name="150Water2Blue" type="Sprite" parent="."]
position = Vector2( 173, 298 )
scale = Vector2( 2.55, 2.55 )
texture = ExtResource( 3 )

[node name="150Water2Orange" type="Sprite" parent="."]
position = Vector2( 505, 298 )
scale = Vector2( 2.6875, 2.6875 )
texture = ExtResource( 6 )

[node name="150Water2Red" type="Sprite" parent="."]
position = Vector2( 850, 299 )
scale = Vector2( 2.73, 2.73 )
texture = ExtResource( 9 )

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 21.0
margin_top = 7.0
margin_right = 232.0
margin_bottom = 47.0
custom_fonts/normal_font = SubResource( 2 )
text = "SCORE:"

[node name="Round_text" type="RichTextLabel" parent="."]
margin_left = 22.0
margin_top = 39.0
margin_right = 234.0
margin_bottom = 154.0
custom_fonts/normal_font = SubResource( 3 )
text = "ROUND:"

[node name="Timer" type="Timer" parent="."]

[node name="StartPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.631373 )
margin_left = -13.0
margin_right = 1027.0
margin_bottom = 607.0

[node name="StartButton" type="TextureButton" parent="StartPanel"]
margin_right = 1048.0
margin_bottom = 605.0

[node name="StartText" type="RichTextLabel" parent="StartPanel"]
margin_left = 246.0
margin_top = 435.0
margin_right = 833.0
margin_bottom = 509.0
custom_fonts/normal_font = SubResource( 1 )
text = "PRESS TO START!!!"

[node name="Lable" type="RichTextLabel" parent="StartPanel"]
margin_left = 395.0
margin_top = 14.0
margin_right = 655.0
margin_bottom = 82.0
custom_fonts/normal_font = SubResource( 4 )
text = "Memory game"

[node name="Instruction" type="RichTextLabel" parent="StartPanel"]
margin_left = 179.0
margin_top = 131.0
margin_right = 877.0
margin_bottom = 291.0
custom_fonts/normal_font = SubResource( 5 )
text = "Press the keys in the same order in which they are played. With each round, the sequence will increase by one note. The more points you score, the greater the reward."

[node name="RestartPanel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.611765 )
margin_left = -8.0
margin_top = -9.0
margin_right = 1029.0
margin_bottom = 601.0

[node name="StartText" type="RichTextLabel" parent="RestartPanel"]
margin_left = 229.0
margin_top = 262.0
margin_right = 928.0
margin_bottom = 453.0
custom_fonts/normal_font = SubResource( 1 )
text = "PRESS TO RESTART "

[node name="RestartButton" type="TextureButton" parent="RestartPanel"]
margin_left = -4.0
margin_top = 2.0
margin_right = 1038.0
margin_bottom = 625.0

[node name="WaitPanel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.596078 )
margin_right = 1029.0
margin_bottom = 627.0

[node name="StartText" type="RichTextLabel" parent="WaitPanel"]
margin_left = 63.0
margin_top = 218.0
margin_right = 1049.0
margin_bottom = 409.0
custom_fonts/normal_font = SubResource( 1 )
text = "GET READY FOR THE NEXT ROUND!!!"

[node name="TestButton" type="Button" parent="."]
visible = false
margin_left = 438.0
margin_top = 83.0
margin_right = 567.0
margin_bottom = 157.0
disabled = true

[node name="Krest" type="Sprite" parent="."]
position = Vector2( 993.25, 31.75 )
scale = Vector2( 0.0908202, 0.0908202 )
texture = ExtResource( 10 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 969.0
margin_top = 9.0
margin_right = 1018.0
margin_bottom = 55.0

[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="StartPanel/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="RestartPanel/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="TestButton" to="." method="_on_TestButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
